[package]
name = "fawn"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-rt = "2.10.0"
serde = { version = "1.0.204", features = ["derive"] }
actix-multipart = "0.7.2"
futures = "0.3.30"
diesel = { version = "2.2.2", features = [
    "postgres",
    "r2d2",
    "chrono",
    "serde_json",
] }
dotenv = "0.15.0"
actix-cors = "0.7.0"
serde_json = "1.0.120"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
redis = "0.26.0"
actix-identity = "0.7.1"
actix-web-actors = "4.3.0"
actix = "0.13.5"
bcrypt = "0.15.1"
